atualizei o carrinho denovo

--- a/views/Carrinho/carrinho.html
+++ b/views/Carrinho/carrinho.html
@@ -349,11 +349,11 @@
               </div>
             </div>
             <div class="banner">
-              <img class="image-7" src="image-70.png" />
+              <img class="image-7" src="pasta de imagens/coleçao de relogios.png" />
               <div class="content">
                 <div class="content2">
                   <div class="info">
-                    <img class="image-8" src="image-80.png" />
+                    <img class="image-8" src="pasta de imagens/logo apple.png" />
                     <div class="heavy-on-features-light-on-price">
                       Pesado em recursos.
                       <br />
@@ -372,13 +372,13 @@
                 <div class="button3">
                   <img
                     class="shopping-cart-simple2"
-                    src="shopping-cart-simple1.svg"
+                    src="pasta de imagens/carrinho-de-compras.png"
                   />
-                  <div class="label2">Adicionar ao carrinho</div>
+                  <div class="label2">Carrinho</div>
                 </div>
                 <div class="button4">
                   <div class="label3">Ver detalhes</div>
-                  <img class="regular-arrow-right" src="regular-arrow-right0.svg" />
+                  <img class="regular-arrow-right" src="pasta de imagens/seta-para-a-direita.png" />
                 </div>
               </div>
             </div>
@@ -416,7 +416,7 @@
             <div class="products">
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image0.png" />
+                  <img class="image" src="pasta de imagens/celular01.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -440,7 +440,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image1.png" />
+                  <img class="image" src="pasta de imagens/samsung galaxy s21.jpg" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -461,7 +461,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image2.png" />
+                  <img class="image" src="pasta de imagens/monitor.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -485,7 +485,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image3.png" />
+                  <img class="image" src="pasta de imagens/celularo2.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -508,14 +508,14 @@
               </div>
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image4.png" />
+                  <img class="image" src="pasta de imagens/drone.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
                         <img class="regular-star21" src="pasta de imagens/estrela.png" />
                         <img class="regular-star22" src="pasta de imagens/estrela.png" />
                         <img class="regular-star23" src="pasta de imagens/estrela.png" />
-                        <img class="regular-star24" src="pasta de imagens/coracao.png" />
+                        <img class="regular-star24" src="pasta de imagens/estrela.png" />
                         <img class="regular-star25" src="pasta de imagens/estrela.png" />
                       </div>
                       <div class="_56-767">(647)</div>
@@ -529,7 +529,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image5.png" />
+                  <img class="image" src="pasta de imagens/tv.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -554,19 +554,19 @@
                   </div>
                 </div>
                 <div class="product2">
-                  <img class="image2" src="image6.png" />
+                  <img class="image2" src="pasta de imagens/monitor2.png" />
                   <div class="button5">
                     <div class="arrow-button">
-                      <img class="heart2" src="heart1.svg" />
+                      <img class="heart2" src="pasta de imagens/contorno-em-forma-de-coracao.png" />
                     </div>
                     <div class="arrow-button">
                       <img
                         class="shopping-cart-simple3"
-                        src="shopping-cart-simple2.svg"
+                        src="pasta de imagens/carrinho-de-compras.png"
                       />
                     </div>
                     <div class="arrow-button2">
-                      <img class="regular-eye" src="regular-eye0.svg" />
+                      <img class="regular-eye" src="pasta de imagens/olho-aberto.png" />
                     </div>
                   </div>
                   <div class="content3">
@@ -589,7 +589,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image7.png" />
+                  <img class="image" src="pasta de imagens/celular03.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -615,7 +615,7 @@
               </div>
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image8.png" />
+                  <img class="image" src="pasta de imagens/headphone02.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -639,7 +639,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image9.png" />
+                  <img class="image" src="pasta de imagens/headphone02.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -660,7 +660,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image10.png" />
+                  <img class="image" src="pasta de imagens/teclado vermelho.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -684,7 +684,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image11.png" />
+                  <img class="image" src="pasta de imagens/impressora.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -707,7 +707,7 @@
               </div>
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image12.png" />
+                  <img class="image" src="pasta de imagens/camera branca.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -728,7 +728,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image13.png" />
+                  <img class="image" src="pasta de imagens/camera preta.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -752,7 +752,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image14.png" />
+                  <img class="image" src="pasta de imagens/impressora branca.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -773,7 +773,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image15.png" />
+                  <img class="image" src="pasta de imagens/maquina de lavar.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -800,7 +800,7 @@
               </div>
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image16.png" />
+                  <img class="image" src="pasta de imagens/monitor3.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -825,7 +825,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image17.png" />
+                  <img class="image" src="pasta de imagens/celular03.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -846,7 +846,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image18.png" />
+                  <img class="image" src="pasta de imagens/arcondicionado.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -870,7 +870,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image19.png" />
+                  <img class="image" src="pasta de imagens/celularo2.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -893,7 +893,7 @@
               </div>
               <div class="row2">
                 <div class="product">
-                  <img class="image" src="image20.png" />
+                  <img class="image" src="pasta de imagens/celular04.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -917,7 +917,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image21.png" />
+                  <img class="image" src="pasta de imagens/notebook.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -938,7 +938,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image22.png" />
+                  <img class="image" src="pasta de imagens/celular05.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
@@ -960,7 +960,7 @@
                   </div>
                 </div>
                 <div class="product">
-                  <img class="image" src="image23.png" />
+                  <img class="image" src="pasta de imagens/notebook2.png" />
                   <div class="content3">
                     <div class="frame-391">
                       <div class="star">
