atualizei pela terceira vez

--- a/views/Carrinho/carrinho.html
+++ b/views/Carrinho/carrinho.html
@@ -42,7 +42,7 @@
           </div>
           <div class="middle-nav">
             <div class="logo">
-              <img class="icon" src="icon0.svg" />
+              <img class="icon" src="pasta de imagens/logo_header.png" />
               <div class="clicon">CLICON</div>
             </div>
             <div class="frame-18">
@@ -53,10 +53,7 @@
             </div>
             <div class="icons">
               <div class="shopping-cart-simple">
-                <img class="vector" src="vector0.svg" />
-                <img class="vector2" src="vector1.svg" />
-                <img class="vector3" src="vector2.svg" />
-                <img class="vector4" src="vector3.svg" />
+                <img class="vector" src="pasta de imagens/carrinho copy.png" /> 
                 <div class="frame-182">
                   <div class="_2">2</div>
                 </div>
@@ -372,7 +369,7 @@
                 <div class="button3">
                   <img
                     class="shopping-cart-simple2"
-                    src="pasta de imagens/carrinho-de-compras.png"
+                    src="pasta de imagens/ShoppingCartSimple.png"
                   />
                   <div class="label2">Carrinho</div>
                 </div>
@@ -396,7 +393,7 @@
                 <div class="sort-by2">Ordenar por:</div>
                 <div class="dropdown2">
                   <div class="good-morning">Mais Popular</div>
-                  <img class="regular-caret-down4" src="regular-caret-down3.svg" />
+                  <img class="regular-caret-down4" src="pasta de imagens/divisa-para-baixo.png" />
                 </div>
               </div>
             </div>
@@ -562,7 +559,7 @@
                     <div class="arrow-button">
                       <img
                         class="shopping-cart-simple3"
-                        src="pasta de imagens/carrinho-de-compras.png"
+                        src="pasta de imagens/ShoppingCartSimple.png"
                       />
                     </div>
                     <div class="arrow-button2">
@@ -866,7 +863,7 @@
                     </div>
                   </div>
                   <div class="badge2">
-                    <div class="best-deals">BEST DEALS</div>
+                    <div class="best-deals">Melhores ofertas</div>
                   </div>
                 </div>
                 <div class="product">
@@ -913,7 +910,7 @@
                     </div>
                   </div>
                   <div class="badge2">
-                    <div class="best-deals">BEST DEALS</div>
+                    <div class="best-deals">Melhores oferta</div>
                   </div>
                 </div>
                 <div class="product">
@@ -980,7 +977,7 @@
                     </div>
                   </div>
                   <div class="badge">
-                    <div class="hot">HOT</div>
+                    <div class="hot">Tempo limitado</div>
                   </div>
                 </div>
               </div>
@@ -1019,7 +1016,7 @@
           <div class="footer2">
             <div class="clicon-e-commerce">
               <div class="logo">
-                <img class="icon2" src="icon1.svg" />
+                <img class="icon2" src="pasta de imagens/logo_footer.png" />
                 <div class="clicon">CLICON</div>
               </div>
               <div class="contact-info">
@@ -1057,7 +1054,7 @@
                 </div>
                 <div class="button6">
                   <div class="browse-all-product">Navegar Por Todos os Produtos</div>
-                  <img class="regular-arrow-right3" src="regular-arrow-right2.svg" />
+                  <img class="regular-arrow-right3" src="pasta de imagens/navegar copy.png" />
                 </div>
               </div>
             </div>
@@ -1092,7 +1089,7 @@
               <div class="links">
                 <div class="mobile-app">
                   <div class="icon-google-play-1">
-                    <img class="group" src="group0.svg" />
+                    <img class="group" src="pasta de imagens/playstore.png" />
                   </div>
                   <div class="info2">
                     <div class="get-it-now">Consiga agora</div>
@@ -1101,7 +1098,7 @@
                 </div>
                 <div class="mobile-app">
                   <div class="apple-negative-1">
-                    <img class="group2" src="group1.svg" />
+                    <img class="group2" src="pasta de imagens/apple.png" />
                   </div>
                   <div class="info2">
                     <div class="get-it-now">Consiga agora</div>
