--- a/views/shopingCard/shopingCard.html
+++ b/views/shopingCard/shopingCard.html
@@ -34,7 +34,7 @@
                     </a>
                 </div>
                 <div class="frame-18">
-                    <input class="search-for-anything" type="text" placeholder="Search for anything...">
+                    <input class="search-for-anything" type="text" placeholder="Pesquisar por algo...">
                     <div>
                         <img src="image/lupa.png" class="pesquisa" width="20" height="20">
                     </div>
