Modificações na Página ShopingCard

--- a/views/shopingCard/shopingCard.html
+++ b/views/shopingCard/shopingCard.html
@@ -334,13 +334,13 @@
                     <div class="label2">Voltar à loja</div>
                 </button>
                 <button class="button5">
-                    <div class="label2">Carrinho</div>
+                    <div class="label2">Adicionar ao Carrinho</div>
                 </button>
             </div>
         </div>
         <div class="card-total">
             <div class="heading">
-                <div class="card-totals">Total</div>
+                <div class="card-totals">Detalhes do Pagamento</div>
             </div>
             <div class="total">
                 <div class="content">
@@ -357,14 +357,14 @@
                         <div class="_24">R$24</div>
                     </div>
                     <div class="frame-407">
-                        <div class="tax">Taxa</div>
+                        <div class="tax">Impostos</div>
                         <div class="_61-99">R$61.99</div>
                     </div>
                 </div>
                 <div class="line-26"></div>
                 <div class="frame-408">
-                    <div class="total2">Total</div>
-                    <div class="_357-99-usd">R$357.99 BRL</div>
+                    <div class="total2">Pagamento Total</div>
+                    <div class="_357-99-usd">R$ 357.99 BRL</div>
                 </div>
             </div>
             <button class="button6">
